Implement GetAggregatorAction WIP
Signed-off-by: Vladisav Jelisavcic <vladisavj@gmail.com>